--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Coding by CodingLab | www.codinglabweb.com -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -354,6 +354,17 @@
     AmagiLoader.hide();
  }, 3000);
 </script>
+
+
+
+  <script src="https://cdn.jsdelivr.net/gh/AmagiTech/JSLoader/amagiloader.js"></script>
+<script>
+ AmagiLoader.show();
+ setTimeout(() => {
+    AmagiLoader.hide();
+ }, 3000);
+</script>
+       
 
 </body>
 </html>
