--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="column">
           <div class="card">
             <div class="img-container">
-              <img src="foto/Duwi.jpg" />
+              <img src="foto/duwi.jpg" />
             </div>
             <h3>Duwi Yanti</h3>
                 <a href=" https://bio-duwi.vercel.app"target="_blank">
