Update bio saya

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               <img src="foto/saya.jpg" />
             </div>
             <h3>Andika pratama</h3>
-             <a href=" https://tugas-kelompok-1orx.vercel.app"target="_blank">
+             <a href=" https://bio-andika.vercel.app"target="_blank">
             <button type="button" class="btn btn-default">Bio</button>
             <p>Pelajar</p>
             <div class="icons">
