--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+ 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +8,7 @@
     
     <!----======== CSS ======== -->
     <link rel="stylesheet" href="style.css">
-<!-- Font Awesome -->
+<!-- Font Aweso me -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -22,7 +22,7 @@
     <!----===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     
-    <title>Dashboard Sidebar Menu</title> 
+    <title>tugas  ku</title> 
 </head>
 <body>
     <nav class="sidebar close">
@@ -162,7 +162,7 @@
             <h3>apin</h3>
                 <a href=" https://tugas-kelompok-1orx.vercel.app/  0"target="_blank">
             <button type="button" class="btn btn-default">Bio</button>
-            <p>Developer</p>
+            <p>Pelajar</p>
             <div class="icons">
               <a href="#">
                 <i class="fab fa-twitter"></i>
