--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap"
       rel="stylesheet"
     />
+
+<link rel="shortcut icon" href="foto/saya.jpg">
+    <meta name="description" content="welcome to my website:)">
+    <meta property="og:image" content="foto/saya.jpg" >
+
     
     <!----===== Boxicons CSS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
