--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <img src="profile-img-3.png" />
             </div>
             <h3>Melissa arianin Nasution</h3>
-                <a href=" https://tugas-kelompok-1orx.vercel.app/  0"target="_blank">
+                <a href="    http  "target="_blank">
             <button type="button" class="btn btn-default">Bio</button>
             <p>Pelajar</p>
             <div class="icons">
@@ -294,10 +294,10 @@
         <div class="column">
           <div class="card">
             <div class="img-container">
-              <img src="profile-img-3.png" />
+              <img src="dini.jpg" />
             </div>
             <h3>Dini Permata sari</h3>
-            <a href=" https://tugas-kelompok-1orx.vercel.app/  0"target="_blank">
+            <a href="   https://bio-dini-gf-elite.vercel.app "target="_blank">
             <button type="button" class="btn btn-default">Bio</button>
             <p>Pelajar</p>
             <div class="icons">
