--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
         <div class="column">
           <div class="card">
             <div class="img-container">
-              <img src="profile-img-3.png" />
+              <img src="foto/melisa.jpg" />
             </div>
             <h3>Melissa arianin Nasution</h3>
-                <a href="    http  "target="_blank">
+                <a href="    https://bio-melisa.vercel.app  "target="_blank">
             <button type="button" class="btn btn-default">Bio</button>
             <p>Pelajar</p>
             <div class="icons">
@@ -294,7 +294,7 @@
         <div class="column">
           <div class="card">
             <div class="img-container">
-              <img src="dini.jpg" />
+              <img src="foto/dini.jpg" />
             </div>
             <h3>Dini Permata sari</h3>
             <a href="   https://bio-dini-gf-elite.vercel.app "target="_blank">
