--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
               <img src="foto/melati.jpg" />
             </div>
             <h3> Melati dwi tata </h3>
-                <a href=" https://bio-sherly.vercel.app"target="_blank">
+                <a href=" https://bio-melati.vercel.app"target="_blank">
             <button type="button" class="btn btn-default">Bio</button>
             <p>Pelajar</p>
             <div class="icons">
